# slurm_job_detective

./: AGENTS.md  LICENSE  README.md  SLURM_SSTAT_REFERENCE.md  main.py  pyproject.toml
scripts/: gpu_load_test.py  mock_cli.py
src/sjdet/: __init__.py  __main__.py  cache.py  cli.py  display.py  slurm.py  update.py
