[project]
name = "slurm-job-detective"
version = "0.1.0"
description = "Live SLURM job stats: CPU efficiency, memory usage, and resource suggestions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.0"]

[project.scripts]
sjdet = "sjdet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sjdet"]

[dependency-groups]
dev = ["torch>=2.0"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
